Stress tests for local Near Caches
* Local single threaded, and local concurrent stress tests added.
* HdrHistograms used to calculate latency, and throughput reported too.
* Added ability to clear local near cache, this is useful for testing.

--- a/client/hotrod-client/pom.xml
+++ b/client/hotrod-client/pom.xml
@@ -112,6 +112,13 @@
          <artifactId>jboss-sasl</artifactId>
          <scope>test</scope>
       </dependency>
+
+      <dependency>
+         <groupId>org.hdrhistogram</groupId>
+         <artifactId>HdrHistogram</artifactId>
+         <scope>test</scope>
+      </dependency>
+
    </dependencies>
 
    <build>
