HHH-10178 - Move Geronimo JTA jar to provided configuration (non-transitive)

--- a/hibernate-infinispan.gradle
+++ b/hibernate-infinispan.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile( libraries.infinispan )
     compile( libraries.rhq )
 
+    provided( libraries.jta )
+
     testCompile project( ':hibernate-testing' )
     testCompile( libraries.infinispan_test )
     testCompile( libraries.jboss_common_core )
