--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -4,11 +4,11 @@
 # License: GNU Lesser General Public License (LGPL), version 2.1 or later.
 # See the lgpl.txt file in the root directory or <http://www.gnu.org/licenses/lgpl-2.1.html>.
 #
-hibernate.dialect org.hibernate.dialect.H2Dialect
-hibernate.connection.driver_class org.h2.Driver
-hibernate.connection.url jdbc:h2:mem:db1;DB_CLOSE_DELAY=-1
-hibernate.connection.username sa
-# hibernate.connection.password
+hibernate.dialect @db.dialect@
+hibernate.connection.driver_class @jdbc.driver@
+hibernate.connection.url @jdbc.url@
+hibernate.connection.username @jdbc.user@
+hibernate.connection.password @jdbc.pass@
 
 hibernate.connection.pool_size 5
 
