--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -340,6 +340,11 @@
             <version>${version.jboss.marshalling}</version>
          </dependency>
          <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-river</artifactId>
+            <version>${version.jboss.marshalling}</version>
+         </dependency>
+         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
             <version>${version.jgroups}</version>
