--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -145,6 +145,7 @@
         <version.javax.cache.cache-tests>${version.javax.cache}</version.javax.cache.cache-tests>
         <version.javax.servlet>2.5</version.javax.servlet>
         <version.jbossjta>5.0.4.Final</version.jbossjta>
+        <version.jboss.common.core>2.2.16.GA</version.jboss.common.core>
         <version.jboss.logging.processor>1.2.1.Final</version.jboss.logging.processor>
         <version.jboss.logmanager>1.3.1.Final</version.jboss.logmanager>
         <version.jboss.negotiation>2.3.6.Final</version.jboss.negotiation>
@@ -1018,6 +1019,24 @@
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-core</artifactId>
                 <version>${version.mockito_dep.hamcrest}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss</groupId>
+                <artifactId>jboss-common-core</artifactId>
+                <version>${version.jboss.common.core}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.naming</groupId>
+                <artifactId>jnp-client</artifactId>
+                <version>${version.org.jboss.naming}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.naming</groupId>
+                <artifactId>jnpserver</artifactId>
+                <version>${version.org.jboss.naming}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
