--- a/hibernate-cache/pom.xml
+++ b/hibernate-cache/pom.xml
@@ -58,6 +58,11 @@
          <artifactId>jnpserver</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -68,6 +73,29 @@
             <configuration>
                <configLocation>checkstyle-hibernate-cache.xml</configLocation>
             </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration combine.self="override">
+               <excludedGroups>${suite.exclude.groups}</excludedGroups>
+               <trimStackTrace>false</trimStackTrace>
+               <systemPropertyVariables>
+                  <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                  <jgroups.ping.timeout>500</jgroups.ping.timeout>
+                  <jgroups.ping.num_initial_members>1</jgroups.ping.num_initial_members>
+                  <jgroups.udp.enable_bundling>false</jgroups.udp.enable_bundling>
+                  <jgroups.bind_addr>localhost</jgroups.bind_addr>
+                  <hibernate.cache.infinispan.jgroups_cfg>2lc-test-tcp.xml</hibernate.cache.infinispan.jgroups_cfg>
+               </systemPropertyVariables>
+            </configuration>
+            <dependencies>
+               <dependency>
+                  <groupId>org.apache.maven.surefire</groupId>
+                  <artifactId>surefire-junit4</artifactId>
+                  <version>${version.maven.surefire}</version>
+               </dependency>
+            </dependencies>
          </plugin>
       </plugins>
    </build>
