ISPN-7963 Add hibernate-cache project to root pom

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
       <module>integrationtests/all-remote-it</module>
       <module>integrationtests/spring-boot-it</module>
       <module>client/marshaller</module>
+      <module>hibernate-cache</module>
    </modules>
 
    <profiles>
